--- a/App.MusicHole.Docker/docker-compose.yml
+++ b/App.MusicHole.Docker/docker-compose.yml
@@ -1,10 +1,9 @@
 version: "3.8"
 services:
   musichole:
-    image: music-hole:1.0.1
+    image: music-hole:latest
     network_mode: host
-    build:
-      context: ../
-      dockerfile: App.MusicHole.Docker/Dockerfile
+    stdin_open: true
+    tty: true
     volumes:
       - /var/logs/musichole:/opt/musichole/logs
